# notedown-wireframe

./: README.md
nextjs-fastapi/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
nextjs-fastapi/api/: README.md  api.code-workspace  app.py  index.py  pyproject.toml  requirements.txt
nextjs-fastapi/api/database/: alembic.ini  database.py  init_db.py  main.py  models.py  psycopg2-2.9.10-cp312-cp312-linux_x86_64.whl  requirements.txt  session.py
nextjs-fastapi/api/database/migrations/: env.py
nextjs-fastapi/api/database/migrations/versions/: 01bce7fa1055_initial_setup.py  8c93716a8fc6_add_notes_table.py  a4a6cbfb7696_create_users_table.py  d6d473252a83_initial_setup.py
nextjs-fastapi/app/: layout.tsx  not-found.tsx  page.tsx
nextjs-fastapi/app/auth/login/: page.tsx
nextjs-fastapi/app/auth/register/: page.tsx
nextjs-fastapi/app/auth/utils/: getUser.ts  handler.ts
nextjs-fastapi/app/components/ui/: testimonials.tsx
nextjs-fastapi/app/profile/: page.tsx
nextjs-fastapi/app/profile/[userid]/: page.tsx
nextjs-fastapi/components/ui/: cta.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  theme-controller.tsx
nextjs-fastapi/components/ui/auth/: toast.tsx
nextjs-fastapi/components/ui/landing/: cta.tsx  features.tsx  navbar.tsx  testimonials.tsx
nextjs-fastapi/components/ui/profile/: footer.tsx  hero.tsx  nav.tsx  notes.tsx  settings.tsx  stats.tsx
