[tool.poetry]
package-mode = false
name = "notedown-wireframe"
version = "0.1.0"
description = ""
authors = ["orakul <osasinnook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
sqlalchemy = {extras = ["postgresql"], version = "^2.0.36"}
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
